heart images added

--- a/project2/index.html
+++ b/project2/index.html
@@ -214,7 +214,7 @@
             </div>
             <div class="sidebar-area">
                 <div class="metrics-container">
-                    <p>Current metrics</p>
+                    <!-- <p>Current metrics</p> -->
                     <div class="metric">
                         <div>Resting heart rate: <span id="rate-display"></span></div>
                     </div>
@@ -266,24 +266,24 @@
             </div>
             <div id="heart-container">
                 <div class="shape shape1">
-                    <img class="shape-img img1A" src="./shapes/shape1a.png" />
-                    <img class="shape-img img1B" src="./shapes/shape1b.png"/>
+                    <img class="shape-img img1A" src="./shapes_resting/shape1a.png" />
+                    <img class="shape-img img1B" src="./shapes_resting/shape1b.png"/>
                 </div>
                 <div class="shape shape2">
-                    <img class="shape-img img2A" src="./shapes/shape2a.png" />
-                    <img class="shape-img img2B" src="./shapes/shape2b.png"/>
+                    <img class="shape-img img2A" src="./shapes_resting/shape2a.png" />
+                    <img class="shape-img img2B" src="./shapes_resting/shape2b.png"/>
                 </div>
                 <div class="shape shape3">
-                    <img class="shape-img img3A" src="./shapes/shape3a.png" />
-                    <img class="shape-img img3B" src="./shapes/shape3b.png"/>
+                    <img class="shape-img img3A" src="./shapes_resting/shape3a.png" />
+                    <img class="shape-img img3B" src="./shapes_resting/shape3b.png"/>
                 </div>
                 <div class="shape shape4">
-                    <img class="shape-img img4A" src="./shapes/shape4a.png" />
-                    <img class="shape-img img4B" src="./shapes/shape4a.png"/>
+                    <img class="shape-img img4A" src="./shapes_resting/shape4a.png" />
+                    <img class="shape-img img4B" src="./shapes_resting/shape4b.png"/>
                 </div>
                 <div class="shape shape5">
-                    <img class="shape-img img5A" src="./shapes/shape5a.png" />
-                    <img class="shape-img img5B" src="./shapes/shape5b.png"/>
+                    <img class="shape-img img5A" src="./shapes_resting/shape5a.png" />
+                    <img class="shape-img img5B" src="./shapes_resting/shape5b.png"/>
                 </div>
             </div>
         </div>
