learn more button and backgrounds added

--- a/project2/index.html
+++ b/project2/index.html
@@ -168,7 +168,13 @@
             <img class="close-icon" src="./icons/close.svg"/>
             <h1>The Stressed Heart Rate</h1>
             <div class="about-body">
-                <p></p>
+                <p>When you experience psychological or physical stress, your body activates the “fight-or-flight”
+                    response. Stress hormones like adrenaline cause your heart to beat faster and your blood 
+                    pressure to rise. This temporary increase in heart rate is normal and helps the body respond 
+                    to challenging situations. Research shows that stress can raise heart rate similarly to light 
+                    physical activity, though the exact change varies widely depending on age, fitness level, and 
+                    overall health. Managing stress through breathing, rest, and movement can help your heart 
+                    return to its resting rhythm.</p>
             </div>
             <!-- <div class="button-container">
                 <button class="learn-more-button">
@@ -186,7 +192,12 @@
             <img class="close-icon" src="./icons/close.svg"/>
             <h1>The Sleeping Heart Rate</h1>
             <div class="about-body">
-                <p></p>
+                <p>During sleep, the body shifts into a recovery-focused state dominated by the parasympathetic nervous 
+                    system. As a result, heart rate typically drops below daytime resting levels, often by about 10–20%, 
+                    reflecting reduced metabolic demand and increased physiological restoration. A lower sleeping heart 
+                    rate is generally associated with good cardiovascular health and effective overnight recovery, though 
+                    individual values naturally vary based on age, fitness, stress, and sleep quality. Understanding your 
+                    sleeping heart rate can provide insight into how well your body is resting and restoring itself.</p>
             </div>
             <!-- <div class="button-container">
                 <button class="learn-more-button">
@@ -200,9 +211,16 @@
             </div>
         </div>
 
-        <div id="learn-more-overlay" class="overlay" style="display: none;">
+        <div class="overlay learn-more-overlay" style="display: none;">
             <img class="close-icon" src="./icons/close.svg"/>
-
+            <h1>Learn More about Your Heart from Trusted Sources</h1>
+            <div class="about-body">
+                <p></p>
+            </div>
+            <div class="disclaimer">
+                <b>Disclaimer:</b> This tool is for visualization and educational purposes only. It is not a medical device 
+                and should not be used to measure, diagnose, or monitor any health condition. 
+            </div>
         </div>
 
         <div id="main-area">
@@ -262,6 +280,12 @@
                             <img class="about-icon" src="icons/about-icon.svg"/> 
                         </div>
                     </div>
+                </div>
+                <div class="learn-more-area">
+                    <button class="learn-more-button">
+                        <p>Learn more</p>
+                        <img class="caret-icon" src="./icons/caret.svg"/>
+                    </button>
                 </div>
             </div>
             <div id="heart-container">
