alert popup functionality

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
       <hr>
       <div class="exercise-section">
-        <a href=" ">
+        <a href="project2/index.html">
           <h3>✴︎ Project 2: Change over Time</h3>
         </a>
       </div>
