--- a/project2/index.html
+++ b/project2/index.html
@@ -3,7 +3,7 @@
     <head><!-- a container for metadata -->
         <meta charset="utf-8"><!--charset: character encoding capable of encoding all characters on the web  -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><!--for browser compatibility: choose rendering engine to view the page in an correct view (for old ver. IE)  -->
-        <title>Hyperlinked Set</title><!--declaring the title, or name, of the HTML document. displayed in the browser's title bar-->
+        <title>The Heart Rate Atlas</title><!--declaring the title, or name, of the HTML document. displayed in the browser's title bar-->
         <meta name="description" content=""><!--keywords/snippet for search engines-->
         <meta name="viewport" content="width=device-width"><!--the browser will (probably) render the width of the page at the width of its own screen -->
         <!-- Add D3.js for CSV parsing -->
@@ -385,6 +385,23 @@
                     <img class="shape-img img5A" src="./shapes_resting/shape5a.png" />
                     <img class="shape-img img5B" src="./shapes_resting/shape5b.png"/>
                 </div>
+            </div>
+            <div id="heart-animation">
+                <div class="shape-anim-sec">
+                    <img class="shape-img img1B" src="./shapes_resting/shape1b.png"/>
+                </div>
+                <!-- <div class="shape-anim-sec">
+                    <img class="shape-img img2B" src="./shapes_resting/shape2b.png"/>
+                </div> -->
+                <div class="shape-anim-sec">
+                    <img class="shape-img img3B" src="./shapes_resting/shape3b.png"/>
+                </div>
+                <div class="shape-anim-sec">
+                    <img class="shape-img img4B" src="./shapes_resting/shape4b.png"/>
+                </div>
+                <!-- <div class="shape-anim-sec">
+                    <img class="shape-img img5B" src="./shapes_resting/shape5b.png"/>
+                </div> -->
             </div>
         </div>
     </body>
