home page formatting

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div>
+    <div id="header-area">
       <h1>Web as Medium</h1>
       <h2>Alex Hogue</h2>
     </div>
@@ -18,49 +18,49 @@
       </div>
       <hr>
       <div class="exercise-section">
-        <a href="exercise2/index.html">
+        <a href="exercise2/index.html" target="_blank">
           <h3>✴︎ Exercise 2: Basic HTML</h3>
         </a>
       </div>
       <hr>
       <div class="exercise-section">
-        <a href="exercise3/index.html">
+        <a href="exercise3/index.html" target="_blank">
           <h3>✴︎ Exercise 3: Adding CSS</h3>
         </a>
       </div>
       <hr>
       <div class="exercise-section">
-        <a href="exercise4/index.html">
+        <a href="exercise4/index.html" target="_blank">
           <h3>✴︎ Exercise 4: Letterform Exploration</h3>
         </a>
       </div>
       <hr>
       <div class="exercise-section">
-        <a href="exercise5/letter1.html">
+        <a href="exercise5/letter1.html" target="_blank">
           <h3>✴︎ Exercise 5: Letterform Motion</h3>
         </a>
       </div>
       <hr>
       <div class="exercise-section">
-        <a href="exercise6/index.html">
+        <a href="exercise6/index.html" target="_blank">
           <h3>✴︎ Exercise 6: Toggle</h3>
         </a>
       </div>
       <hr>
       <div class="exercise-section">
-        <a href="project1/index.html">
+        <a href="project1/index.html" target="_blank">
           <h3>✴︎ Project 1: Hyperlinked Set</h3>
         </a>
       </div>
       <hr>
       <div class="exercise-section">
-        <a href="exercise8/pattern1.html">
+        <a href="exercise8/pattern1.html" target="_blank">
           <h3>✴︎ Exercise 8: Patterns</h3>
         </a>
       </div>
       <hr>
       <div class="exercise-section">
-        <a href="project2/index.html">
+        <a href="project2/index.html" target="_blank">
           <h3>✴︎ Project 2: Change over Time</h3>
         </a>
       </div>
